# cmarie

./: .gitignore  README.md  pyproject.toml  setup.py
cmarie/: comparison.py  delta.py
extensions/cmarie/: bind.c  cdeltamodule.c  cdeltamodule.h  integrate.pyx
src/: bind.c  cdeltamodule.c  cdeltamodule.h
src/cmarie/: comparison.py  delta.py  numba_compiled.py
